proyecto terminado 11 de abril

--- a/lista.html
+++ b/lista.html
@@ -11,7 +11,7 @@
 <body>
   
   <div class="espacio-principal"> 
-      <div class="menu-contenedor"> <img src="./images/inicio.jpg" class="img-inicio" srcset="">
+      <div class="menu-contenedor"><a href="./listageneral.html"> <img src="./images/inicio.jpg" class="img-inicio" srcset=""></a>
         <div class="img-carrito-caja"><img src="./images/shopping-cart.svg" class="img-carrito" srcset=""></div>
         <!-- <div class="menu-titulo"></div> -->
         </div>
