--- a/listageneral.html
+++ b/listageneral.html
@@ -13,8 +13,8 @@
     
     
         <div class="menu-contenedor">
-          <div class="menu-titulo"></div>
-          <div class="carrito-icon"></div>
+          <a href="./index.html"><img src="./images/inicio.jpg" class="img-inicio" srcset=""></a>
+          <div class="carrito-icon"> <a href="./lista.html"> <img src="./images/shopping-cart.svg" class="carrito" srcset=""></a></div>
         </div>
         <div class="contenedor-buscador">
           Buscar produccion: 
