--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Saitama VideoStore</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -35,8 +35,8 @@
         <a href="https://wa.me/573184625422">
         <img src="images/whatsapp.svg" class="social" >
         </a>
-        <a href="https://www.instagram.com/laacademiageek/">
-        <img src="images/academia-Geek.jpg" class="img-footer" >
+        <a href="https://github.com/jonathz">
+        <img src="images/githubA.png" class="img-footer" >
         </a>
 
     </footer>
