--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
         <div class="imagen-de-bienvenida">  <img src="./images/hero.jpg" class="imagen-entrada" alt="" srcset=""></div>
         <div class="contenedor-categ">
-          <a href="./listageneral.html"><img src="./images/anime.jpeg" class="img-anime" alt="" sizes="" srcset=""></a> 
+          <a href="./listageneral.html"><img src="./images/anime2.png" class="img-anime" alt="" sizes="" srcset=""></a> 
             <div class="cont-pregunta"><h3 class="pregunta">¿Que vamos a ver hoy ? <br> ¿Anime o series?</h3></div>
           <a href="./listageneral.html?contenido=series" ><img src="./images/series.jpeg" class="img-series" alt="" srcset=""></a>
         </div>
